--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.1",
+    "@radix-ui/react-select": "^2.1.4",
     "axios": "^1.7.8",
     "chart.js": "^4.4.6",
     "flowbite": "^2.5.1",
