--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.0.1",
     "@radix-ui/react-select": "^2.1.4",
     "axios": "^1.7.8",
@@ -28,7 +29,10 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
-    "styled-components": "^6.1.13"
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.13",
+    "tailwind-scrollbar": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
