--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.6",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
+    "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
